--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,8 @@ verify_ssl = true
 ipdb = "*"
 ipython = "*"
 coverage = "*"
-profiling = "*"
+pprofile = "*"
+flake8 = "*"
 
 [packages]
 npyscreen = "*"
