Use doit for tests and build

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ coverage = "*"
 pprofile = "*"
 flake8 = "*"
 setuptools = "*"
+pyinstaller = "*"
+doit = "*"
+autopep8 = "*"
 
 [packages]
 npyscreen = "*"
